--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/fonts.css">
   
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
 
@@ -15,38 +17,57 @@
   </style>
 </head>
 <body>
-
+  
   <!-- Sign-up form start -->
 
-  Stay updated!
+  <main>
+    <div class="container">
+      <picture class="hero-image">
+        <source media="(min-width: 1024px)" srcset="assets/images/illustration-sign-up-desktop.svg">
+        <img src="assets/images/illustration-sign-up-mobile.svg" alt="tablet">
+      </picture>
 
-  Join 60,000+ product managers receiving monthly updates on:
+      <div class="signup-form">
+        <h2>Stay updated!</h2>
+        <p>Join 60,000+ product managers receiving monthly updates on:</p>
+        <ul>
+          <li>Product discovery and building what matters</li>
+          <li>Measuring to ensure updates are a success</li>
+          <li>And much more!</li>
+        </ul>
+        <form id="form" novalidate>
+          <div class="form-row">
+            <label for="email">Email address</label>
+            <span aria-live="polite" id="email-error"></span>
+          </div>
 
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
+          <input id="email" name="email" type="text" placeholder="email@company.com" autofocus />
+          <button type="submit">Subscribe to monthly newsletter</button>
+        </form>
+      </div>
+    </div>
+    <!-- Sign-up form end -->
 
-  Email address
-  email@company.com
 
-  Subscribe to monthly newsletter
+   <!-- Success message start -->
 
-  <!-- Sign-up form end -->
+    <div class="success-message">
+      <img src="assets/images/icon-success.svg" alt="success symbol">
+      <h2>Thanks for subscribing!</h2>
+      <p>A confirmation email has been sent to ash@loremcompany.com. 
+        Please open it and click the button inside to confirm your subscription.</p>
+      <button>Dismiss message</button>
+    </div>
 
-  <!-- Success message start -->
-
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
+    <!-- Success message end -->
+  </main>
   
-  <div class="attribution">
+  
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
+
+  <script src="main.js"></script>
 </body>
 </html>
