Added some final touches to styles and JS

--- a/index.html
+++ b/index.html
@@ -10,27 +10,26 @@
   
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { font-size: 14px; text-align: center; color: hsl(66, 86%, 65%);}
+    .attribution a { color: hsl(191, 71%, 49%); }
   </style>
 </head>
 <body>
   
   <!-- Sign-up form start -->
 
-  <main>
-    <div class="container">
+  <main class="container">
+    <div class="form-container">
       <picture class="hero-image">
-        <source media="(min-width:1024px)" srcset="./assets/images/illustration-sign-up-desktop.svg">
-        <img src="./assets/images/illustration-sign-up-mobile.svg" alt="tablet">
+        <source srcset="./assets/images/illustration-sign-up-desktop.svg" media="(min-width: 1024px)" />
+        <img src="./assets/images/illustration-sign-up-mobile.svg" alt="tablet" />
       </picture>
 
       <div class="signup-form">
         <h2 class="heading">Stay updated!</h2>
         <p>Join 60,000+ product managers receiving monthly updates on:</p>
-        <ul>
+        <ul class="offerings">
           <li>Product discovery and building what matters</li>
           <li>Measuring to ensure updates are a success</li>
           <li>And much more!</li>
@@ -42,7 +41,7 @@
           </div>
 
           <input id="email" name="email" type="text" placeholder="email@company.com" autofocus />
-          <button class="btn">Subscribe to monthly newsletter</button>
+          <button type="submit" class="btn">Subscribe to monthly newsletter</button>
         </form>
       </div>
     </div>
@@ -58,17 +57,19 @@
         <p>A confirmation email has been sent to <span class="email-text"></span>. 
           Please open it and click the button inside to confirm your subscription.</p>
       </div>
-      <button class="btn">Dismiss message</button>
+      <button class="dismiss-button btn">Dismiss message</button>
     </div>
 
     <!-- Success message end -->
   </main>
   
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Vikash Yadav</a>.
+    </div>
+  </footer>
   
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 
   <script src="main.js"></script>
 </body>
